# AviSynth-vsDeGrainMedian

./: CMakeLists.txt  README.md
msvc/: vsDeGrainMedian.sln  vsDeGrainMedian.vcxproj  vsDeGrainMedian.vcxproj.filters
src/: vsDeGrainMedian.cpp  vsDeGrainMedian.h  vsDeGrainMedian.rc  vsDeGrainMedian_SSE2.cpp
